# POTA

./: README.md  ai_studio_code.py  direct_test.py
libOTe/: .gitignore  CMakeLists.txt
libOTe/cryptoTools/: .gitignore  CMakeLists.txt
libOTe/cryptoTools/cryptoTools/: CMakeLists.txt
libOTe/cryptoTools/cryptoTools/Common/: BitIterator.h  BitVector.cpp  BitVector.h  Defines.h  Log.h  MatrixView.h  TestCollection.cpp  TestCollection.h  Timer.cpp  Timer.h
libOTe/cryptoTools/cryptoTools/Crypto/: AES.cpp  AES.h  PRNG.cpp  PRNG.h
libOTe/cryptoTools/cryptoTools/Network/: Channel.cpp  Channel.h  IOService.cpp  IOService.h  IoBuffer.h  SocketAdapter.h
libOTe/cryptoTools/frontend_cryptoTools/: main.cpp
libOTe/cryptoTools/frontend_cryptoTools/Tutorials/: Network.h
libOTe/cryptoTools/tests_cryptoTools/: AES_Tests.cpp  BtChannel_Tests.cpp  BtChannel_Tests.h  UnitTests.cpp
libOTe/frontend/: CMakeLists.txt  util.cpp  util.h
libOTe/libOTe/: CMakeLists.txt
libOTe/libOTe/NChooseOne/Kkrt/: KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h  KkrtNcoOtSender.cpp  KkrtNcoOtSender.h
libOTe/libOTe/NChooseOne/Oos/: OosNcoOtReceiver.cpp  OosNcoOtReceiver.h  OosNcoOtSender.cpp
libOTe/libOTe/Tools/: LinearCode.cpp  Tools.cpp  Tools.h
libOTe/libOTe/TwoChooseOne/: OTExtInterface.h  TcoOtDefines.h
libOTe/libOTe_Tests/: CMakeLists.txt  Common.h  OT_Tests.cpp  UnitTests.cpp
pota_project/: CMakeLists.txt  errors.txt  instructions.txt  pota_hardware.h  pota_networked.cpp
